Fix overlap issue with sticky header

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -201,6 +201,7 @@ td.positives {
     border-radius: 3px;
     margin-left: 0px !important;
     padding: 5px;
+    border-collapse: separate;
   }
 
   &.short {
